some correction the both of projects

--- a/Simple Project/simple CV/index.html
+++ b/Simple Project/simple CV/index.html
@@ -14,7 +14,7 @@
         <div class="cv-container">
           <!-- CV side bar  -->
           <div class="cv-side-content">
-            <div class="person-img"><img src="./img/person.JPG" alt="" /></div>
+            <div class="person-img"><img src="./image/person.JPG" alt="" /></div>
             <div class="side-all-content">
               <div class="contact">
                 <h1>Contact</h1>
